--- a/assets/scss/partials/_placeholders.scss
+++ b/assets/scss/partials/_placeholders.scss
@@ -2,7 +2,7 @@
     color: lightShift($color5);
     &:hover,
     &:focus {
-        color: $color2;
+        color: lightShift($color2);
     }
 }
 
