--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -77,6 +77,7 @@
     &:hover img,
     &:focus img {
       opacity: 1;
+      transform: scale(0.99);
     }
     &:hover:before,
     &:hover:after,
