--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -55,6 +55,9 @@ main .tabs {
     textarea {
         background-image: url(../../images/template/paper.png);
     }
+    input[type="submit"] {
+        @include setbox(80px, null,  null,  null);
+}
     input[type="submit"]:disabled {
         opacity: 1;
     }
