--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -19,7 +19,6 @@
 }
 /* template */
 body {
-  max-width: 1920px;
   margin: auto;
   position: relative;
   font-family: OpenSans-Regular;
@@ -200,13 +199,17 @@ footer::before {
 }
 
 /* home */
+main > section {
+  margin: auto auto 3.8vh auto;
+}
+
 .hover {
   margin: 1rem auto;
   box-shadow: 0 -1px rgba(43, 36, 29, 0.1);
 }
 @media screen and (min-width: 64em) {
   .hover {
-    margin: 1rem auto 24vh auto;
+    margin: 7.6vh auto 18vh auto;
     box-shadow: 0 1px rgba(43, 36, 29, 0.1), 0 -1px rgba(43, 36, 29, 0.1);
   }
 }
