--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -350,7 +350,7 @@ main > section {
 }
 .sticky-ul li.last {
   font-size: 12.5px;
-  color: #737373;
+  color: #4a4a4a;
 }
 .sticky-ul .fi-list {
   font-size: 11px;
