--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -259,6 +259,7 @@ main > section {
 }
 .hover .hover-box h3 {
   position: absolute;
+  background-image: url(../../images/template/paper.png);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
