--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -64,6 +64,7 @@ main > section {
     }
     h3 {
       position: absolute;
+      background-image: url(../../images/template/paper.png);
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
