--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -75,7 +75,7 @@ h5 {
 }
 
 main {
-  min-height: 78.92vh;
+  min-height: 89vh;
 }
 @media screen and (min-width: 40em) {
   main > * {
@@ -91,6 +91,11 @@ main i {
   background-color: #e1ca6f;
   background-blend-mode: screen;
 }
+@media screen and (min-width: 1920px) {
+  .top-bar .top-bar-right {
+    margin: auto calc(50vw - 960px) auto auto;
+  }
+}
 .top-bar .top-bar-right ul {
   background: transparent;
 }
@@ -101,6 +106,11 @@ main i {
 .top-bar .top-bar-right ul li a:hover, .top-bar .top-bar-right ul li a:focus {
   color: #f8f8ff;
   text-shadow: none;
+}
+@media screen and (min-width: 1920px) {
+  .top-bar .top-bar-left {
+    margin: auto auto auto calc(50vw - 960px);
+  }
 }
 .top-bar .top-bar-left #my-svg {
   display: inline-block;
@@ -145,8 +155,18 @@ footer {
   position: relative;
   z-index: 0;
 }
-footer ul + ul {
+@media screen and (min-width: 1920px) {
+  footer > ul.no-bullet {
+    margin: auto auto auto calc(50vw - 960px);
+  }
+}
+footer ul + ul.no-bullet {
   font-size: smaller;
+}
+@media screen and (min-width: 1920px) {
+  footer ul + ul.no-bullet {
+    margin: auto calc(50vw - 960px) auto auto;
+  }
 }
 footer li a {
   color: #2b241d;
@@ -294,8 +314,15 @@ main > section {
   background-color: transparent;
   box-shadow: 0 -1px rgba(43, 36, 29, 0.2);
   border: none;
+  max-width: 1920px;
   margin: 0;
   padding: 0;
+}
+@media screen and (min-width: 1920px) {
+  .tabs-content {
+    margin: auto;
+    box-shadow: 1px -1px rgba(43, 36, 29, 0.2), -1px 0 rgba(43, 36, 29, 0.2);
+  }
 }
 .tabs-content .tabs-panel.is-active {
   min-height: 86vh;
