--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -105,6 +105,11 @@ main > section {
   background-color: $transparent;
   box-shadow: 0 -1px rgba($color1, 0.2);
   border: none;
+  max-width: 1920px;
+  @include x_large_and_up {
+    @include box(auto, null);
+    box-shadow: 1px -1px rgba($color1, 0.2), -1px 0 rgba($color1, 0.2);
+  }
   @include box();
   .tabs-panel.is-active {
     min-height: 86vh;
