--- a/assets/scss/template/_header.scss
+++ b/assets/scss/template/_header.scss
@@ -2,19 +2,27 @@
     background-image: url(../../images/template/paper.png);
     background-color: $color3;
     background-blend-mode: screen;
-    .top-bar-right ul {
-        background: $transparent;
-        li a {
-            color: $color1;
-            @include box(null, 0.5rem);
-            &:hover,
-            &:focus {
-                color: $white;
-                text-shadow: none;
+    .top-bar-right {
+        @include x_large_and_up{
+            @include box(auto calc(50vw - 960px) auto auto, null);
+        }
+        ul {
+            background: $transparent;
+            li a {
+                color: $color1;
+                @include box(null, 0.5rem);
+                &:hover,
+                &:focus {
+                    color: $white;
+                    text-shadow: none;
+                }
             }
         }
     }
     .top-bar-left {
+        @include x_large_and_up{
+            @include box(auto auto auto calc(50vw - 960px), null);
+        }
         #my-svg {
             display: inline-block;
             @include setbox(235px, 100px, null, null);
