--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -77,6 +77,13 @@ h5 {
 main {
   min-height: 89vh;
 }
+@media screen and (min-width: 1921px) {
+  main {
+    width: 1920px;
+    margin: auto;
+    box-shadow: 1px 0 rgba(43, 36, 29, 0.2), -1px 0 rgba(43, 36, 29, 0.2);
+  }
+}
 @media screen and (min-width: 40em) {
   main > * {
     margin-bottom: 50px;
@@ -316,13 +323,6 @@ main > section {
   border: none;
   margin: 0;
   padding: 0;
-}
-@media screen and (min-width: 1921px) {
-  .tabs-content {
-    width: 1920px;
-    margin: auto;
-    box-shadow: 1px -1px rgba(43, 36, 29, 0.2), -1px 0 rgba(43, 36, 29, 0.2);
-  }
 }
 .tabs-content .tabs-panel.is-active {
   min-height: 86vh;
