--- a/assets/css/notfound.css
+++ b/assets/css/notfound.css
@@ -116,6 +116,13 @@ main i {
   color: #2b241d;
 }
 
+@media screen and (min-width: 1921px) {
+  main.grid-container {
+    box-sizing: content-box;
+    padding: 0 360px;
+  }
+}
+
 .top-bar {
   background-image: url(../../images/template/paper.png);
   background-color: #e1ca6f;
