--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -146,6 +146,9 @@ main > section {
     position: sticky;
     top: 0;
   }
+  @include large_and_up { 
+    font-size: 19px;
+  }
   li {
     a {
       @include box();
