--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -23,9 +23,6 @@ main > section {
   }
   .hover-box {
     position: relative;
-    display: inline-block;
-    max-width: 170px;
-    @include setbox(100%, null, null, null);
     *,
     &:before,
     &:after {
@@ -33,8 +30,7 @@ main > section {
     }
     &:before,
     &:after {
-      transition: all 0.3s linear;
-      box-sizing: border-box;
+      transition: transform 0.3s linear, border-width 0.3s linear;
       border-radius: 50%;
       content: "";
       position: absolute;
@@ -48,9 +44,6 @@ main > section {
     }
     img {
       transition: transform 0.3s linear, opacity 0.3s linear;
-      max-width: 100%;
-      backface-visibility: hidden;
-      vertical-align: top;
       border-radius: 50%;
       @include setbox(null, null, 9px, null);
       opacity: 0.7;
@@ -147,7 +140,7 @@ main > section {
     position: sticky;
     top: 0;
   }
-  @include large_and_up { 
+  @include large_and_up {
     font-size: 19px;
   }
   li {
