--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -254,16 +254,12 @@ main > section {
 }
 .hover .hover-box {
   position: relative;
-  display: inline-block;
-  max-width: 170px;
-  width: 100%;
 }
 .hover .hover-box *, .hover .hover-box:before, .hover .hover-box:after {
   box-sizing: border-box;
 }
 .hover .hover-box:before, .hover .hover-box:after {
-  transition: all 0.3s linear;
-  box-sizing: border-box;
+  transition: transform 0.3s linear, border-width 0.3s linear;
   border-radius: 50%;
   content: "";
   position: absolute;
@@ -277,9 +273,6 @@ main > section {
 }
 .hover .hover-box img {
   transition: transform 0.3s linear, opacity 0.3s linear;
-  max-width: 100%;
-  backface-visibility: hidden;
-  vertical-align: top;
   border-radius: 50%;
   padding: 9px;
   opacity: 0.7;
