--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -268,6 +268,7 @@ main .tabs .tabs-title > a[aria-selected=true] {
 .tabs-content {
   background: transparent;
   border: none;
+  transition: none;
 }
 .tabs-content .is-active {
   padding: 1rem 0;
