--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -262,7 +262,7 @@ main .tabs li a h3 {
   padding: 0;
 }
 main .tabs .tabs-title > a[aria-selected=true] {
-  background-color: rgba(97, 97, 97, 0.1);
+  background: rgba(97, 97, 97, 0.1);
 }
 
 .tabs-content {
