--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -247,6 +247,7 @@ main > section {
     box-shadow: 0 1px rgba(43, 36, 29, 0.1), 0 -1px rgba(43, 36, 29, 0.1);
   }
 }
+.hover .is-active > a,
 .hover .tabs-title > a[aria-selected=true],
 .hover .tabs-title > a:hover,
 .hover .tabs-title > a:focus {
