--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -29,7 +29,7 @@ main .tabs {
         }
     }
     .tabs-title > a[aria-selected="true"] {
-        background-color: rgba($color6, 0.1);
+        background: rgba($color6, 0.1);
     }
 }
 
