--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -28,7 +28,7 @@ body::before {
   opacity: 0.75;
   background-color: rgba(225, 202, 111, 0.075);
   background-image: url(../../images/template/body-mobile.jpg);
-  background-position: center center;
+  background-position: center top;
   background-size: contain;
 }
 @media screen and (min-width: 64em) {
