--- a/assets/scss/template/_styles.scss
+++ b/assets/scss/template/_styles.scss
@@ -16,14 +16,14 @@ body {
         opacity: 0.75;
         background-color: rgba($color3, 0.075);
         background-image: url(../../images/template/body-mobile.jpg);
+        background-position: center top;
+        background-size: contain;
         @include large_and_up {
             background-image: url(../../images/template/body.jpg);
             background-attachment: fixed;
             background-size: cover;
             background-repeat: no-repeat;
         }
-        background-position: center center;
-        background-size: contain;
     }
 }
 
