--- a/assets/scss/template/_footer.scss
+++ b/assets/scss/template/_footer.scss
@@ -1,12 +1,12 @@
 footer {
     background-image: url(../../images/template/paper.png);
     background-blend-mode: screen;
-    padding-top: 15px;
+    @include box(null, 15px 0 0 0);
     background-color: darkShift($color3);
     color: $color1;
     position: relative;
     z-index: 0;
-    > ul.no-bullet  {
+    > ul.no-bullet {
         @include x_large_and_up {
             @include box(auto auto auto calc(50vw - 960px), null);
         }
