--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -12,10 +12,10 @@ main h1 {
   font-style: oblique;
   text-shadow: 0 0 2.5px #2b241d;
   font-size: 1.25rem;
+  font-family: Montserrat-Regular;
 }
 @media screen and (min-width: 40em) {
   main h1 {
-    padding: 0.5%;
     margin: 40px auto 0 auto;
     font-size: 2.5rem;
   }
@@ -114,6 +114,7 @@ main {
 }
 main i {
   color: #2b241d;
+  margin: 0 0 1rem 0;
 }
 
 @media screen and (min-width: 1921px) {
