--- a/assets/scss/partials/_placeholders.scss
+++ b/assets/scss/partials/_placeholders.scss
@@ -27,8 +27,9 @@
         font-style: oblique;
         text-shadow: 0 0 2.5px $color1;
         font-size: 1.25rem;
+        font-family: Montserrat-Regular;
         @include medium_and_up() {
-            @include setbox(null, null, 0.5%, 40px auto 0 auto);
+            @include setbox(null, null, null, 40px auto 0 auto);
             font-size: 2.5rem;
         }
     }
