--- a/assets/css/archive.css
+++ b/assets/css/archive.css
@@ -15,7 +15,7 @@ main h1 {
 }
 @media screen and (min-width: 40em) {
   main h1 {
-    margin: 40px auto 0 auto;
+    margin: 50px auto;
     font-size: 2.5rem;
   }
 }
