--- a/assets/scss/single.scss
+++ b/assets/scss/single.scss
@@ -9,4 +9,8 @@ main {
     #commentsubmit {
         @include box(auto, null);
     }
+    textarea {
+        background-image: url(../../images/template/paper.png);
+        resize: none;
+    }
 }
