--- a/assets/scss/template/_footer.scss
+++ b/assets/scss/template/_footer.scss
@@ -36,6 +36,7 @@ footer {
         input,
         button {
             cursor: pointer;
+            background-image: url(../../images/template/paper.png);
         }
         button {
             background-color: rgba($color4, 0.5);
