--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -43,9 +43,6 @@ main .tabs {
     .button {
         @extend %button;
     }
-    textarea {
-        resize: none;
-    }
     legend {
         color: $color1;
     }
@@ -63,24 +60,7 @@ main .tabs {
         opacity: 1;
     }
     textarea {
-        appearance: auto;
-        overflow-y: scroll;
-        overflow-x: hidden;
-        scrollbar-color: $color3 rgba($color6, 0.25);
-        scrollbar-width: thin;
-        &::-webkit-scrollbar {
-            @include setbox(7px, null, null, null);
-        }
-        &::-webkit-scrollbar-thumb {
-            background: $color3;
-        }
-        &::-webkit-scrollbar-track {
-            background: rgba($color6, 0.25);
-        }
-        &::-webkit-scrollbar-thumb:hover,
-        &::-webkit-scrollbar-thumb:focus {
-            @extend ::-webkit-scrollbar-thumb;
-        }
+        @extend %textarea;
     }
 }
 
