--- a/assets/scss/partials/_placeholders.scss
+++ b/assets/scss/partials/_placeholders.scss
@@ -29,7 +29,7 @@
         font-size: 1.25rem;
         font-family: Montserrat-Regular;
         @include medium_and_up() {
-            @include setbox(null, null, null,  50px auto);
+            @include setbox(null, null, null, 50px auto);
             font-size: 2.5rem;
         }
     }
@@ -47,5 +47,27 @@
         &:focus {
             background-color: rgba($color5, 0.5);
         }
+    }
+}
+
+%textarea {
+    resize: none;
+    appearance: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-color: $color3 rgba($color6, 0.25);
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+        @include setbox(7px, null, null, null);
+    }
+    &::-webkit-scrollbar-thumb {
+        background: $color3;
+    }
+    &::-webkit-scrollbar-track {
+        background: rgba($color6, 0.25);
+    }
+    &::-webkit-scrollbar-thumb:hover,
+    &::-webkit-scrollbar-thumb:focus {
+        @extend ::-webkit-scrollbar-thumb;
     }
 }
