--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -25,19 +25,9 @@ body::before {
   left: 0;
   z-index: -999;
   background-blend-mode: screen;
-  opacity: 0.75;
-  background-color: rgba(225, 202, 111, 0.075);
-  background-image: url(../../images/template/body-mobile.jpg);
-  background-position: center top;
-  background-size: contain;
-}
-@media screen and (min-width: 64em) {
-  body::before {
-    background-image: url(../../images/template/body.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+  background-color: #2b241d;
+  background-attachment: fixed;
+  background-image: url(../../images/template/body.jpg);
 }
 
 h1 {
@@ -230,14 +220,14 @@ footer::before {
 /* about */
 @media screen and (min-width: 40em) {
   .p-left p,
-.p-right p {
+  .p-right p {
     padding: 0;
     margin: 0;
   }
 }
 @media screen and (min-width: 40em) {
   .p-left h3,
-.p-right h3 {
+  .p-right h3 {
     padding: 2rem 1rem 0 1rem;
   }
 }
