--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -32,19 +32,9 @@ body::before {
   left: 0;
   z-index: -999;
   background-blend-mode: screen;
-  opacity: 0.75;
-  background-color: rgba(225, 202, 111, 0.075);
-  background-image: url(../../images/template/body-mobile.jpg);
-  background-position: center top;
-  background-size: contain;
-}
-@media screen and (min-width: 64em) {
-  body::before {
-    background-image: url(../../images/template/body.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+  background-color: #2b241d;
+  background-attachment: fixed;
+  background-image: url(../../images/template/body.jpg);
 }
 
 h1 {
