--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -32,9 +32,19 @@ body::before {
   left: 0;
   z-index: -999;
   background-blend-mode: screen;
-  background-color: #2b241d;
-  background-attachment: fixed;
-  background-image: url(../../images/template/body.jpg);
+  opacity: 0.75;
+  background-color: rgba(225, 202, 111, 0.075);
+  background-image: url(../../images/template/body-mobile.jpg);
+  background-position: center top;
+  background-size: contain;
+}
+@media screen and (min-width: 64em) {
+  body::before {
+    background-image: url(../../images/template/body.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
 
 h1 {
