--- a/assets/scss/template/_styles.scss
+++ b/assets/scss/template/_styles.scss
@@ -12,10 +12,18 @@ body {
         bottom: 0;
         left: 0;
         z-index: -999;
-		background-blend-mode: screen;
-        background-color: $color1;
-        background-attachment: fixed;
-        background-image: url(../../images/template/body.jpg);
+        background-blend-mode: screen;
+        opacity: 0.75;
+        background-color: rgba($color3, 0.075);
+        background-image: url(../../images/template/body-mobile.jpg);
+        background-position: center top;
+        background-size: contain;
+        @include large_and_up {
+            background-image: url(../../images/template/body.jpg);
+            background-attachment: fixed;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     }
 }
 
