--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -17,26 +17,14 @@ main a:hover, main a:focus {
 body {
   margin: auto;
   font-family: OpenSans-Regular;
-}
-body::before {
-  position: sticky;
-  display: block;
-  height: 100vh;
-  margin-top: -100vh;
-  content: "";
-  top: 0;
-  z-index: -999;
   background-blend-mode: screen;
-  opacity: 0.75;
   background-color: rgba(225, 202, 111, 0.075);
   background-image: url(../../images/template/body-mobile.jpg);
-  background-position: center;
-  background-size: contain;
+  background-position: left top;
 }
 @media screen and (min-width: 64em) {
-  body::before {
+  body {
     background-image: url(../../images/template/body.jpg);
-    background-size: cover;
   }
 }
 
@@ -98,6 +86,8 @@ main i {
   background-image: url(../../images/template/paper.png);
   background-color: #e1ca6f;
   background-blend-mode: screen;
+  position: relative;
+  z-index: 998;
 }
 @media screen and (min-width: 1921px) {
   .top-bar .top-bar-right {
@@ -135,7 +125,7 @@ main i {
   background-blend-mode: screen;
   background-color: #e1ca6f;
   position: relative;
-  z-index: 1;
+  z-index: 999;
 }
 .title-bar .title-bar-title {
   height: 50px;
