--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -20,27 +20,26 @@
 /* template */
 body {
   margin: auto;
+  position: relative;
   font-family: OpenSans-Regular;
 }
 body::before {
-  position: sticky;
-  display: block;
-  height: 100vh;
-  margin-top: -100vh;
+  position: absolute;
   content: "";
   top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   z-index: -999;
   background-blend-mode: screen;
-  opacity: 0.75;
   background-color: rgba(225, 202, 111, 0.075);
   background-image: url(../../images/template/body-mobile.jpg);
-  background-position: center;
+  background-position: center top;
   background-size: contain;
 }
 @media screen and (min-width: 64em) {
   body::before {
     background-image: url(../../images/template/body.jpg);
-    background-size: cover;
   }
 }
 
