--- a/assets/scss/template/_styles.scss
+++ b/assets/scss/template/_styles.scss
@@ -1,24 +1,23 @@
 /* template */
 body {
     @include setbox(null, null, null, auto);
+	position: relative;
     font-family: OpenSans-Regular;
     &::before {
-        position: sticky;
-        display: block;
-        height: 100vh;
-        margin-top: -100vh;
+        position: absolute;
         content: "";
         top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         z-index: -999;
         background-blend-mode: screen;
-        opacity: 0.75;
         background-color: rgba($color3, 0.075);
         background-image: url(../../images/template/body-mobile.jpg);
-        background-position: center;
+        background-position: center top;
         background-size: contain;
         @include large_and_up {
-            background-image: url(../../images/template/body.jpg);
-            background-size: cover;
+            background-image: url(../../images/template/body.jpg);      
         }
     }
 }
