--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -56,6 +56,7 @@ body::before {
   right: 0;
   bottom: 0;
   left: 0;
+  opacity: 0.9;
   z-index: -999;
   background-blend-mode: screen;
   background-color: rgba(225, 202, 111, 0.075);
