--- a/assets/scss/template/_styles.scss
+++ b/assets/scss/template/_styles.scss
@@ -10,6 +10,7 @@ body {
         right: 0;
         bottom: 0;
         left: 0;
+        opacity: 0.9;
         z-index: -999;
         background-blend-mode: screen;
         background-color: rgba($color3, 0.075);
