--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -47,8 +47,8 @@ main .tabs li a h3:hover, main a:hover, main .tabs li a h3:focus, main a:focus {
 body {
   margin: auto;
   font-family: OpenSans-Regular;
-  background-blend-mode: screen;
-  background-color: rgba(225, 202, 111, 0.075);
+  background-blend-mode: lighten;
+  background-color: rgba(248, 248, 255, 0.2);
   background-image: url(../../images/template/body-mobile.jpg);
   background-position: center top;
   background-size: contain;
