--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -45,8 +45,8 @@ main input[type=submit]:hover, main input[type=submit]:focus {
 body {
   margin: auto;
   font-family: OpenSans-Regular;
-  background-blend-mode: screen;
-  background-color: rgba(225, 202, 111, 0.075);
+  background-blend-mode: lighten;
+  background-color: rgba(248, 248, 255, 0.2);
   background-image: url(../../images/template/body-mobile.jpg);
   background-position: center top;
   background-size: contain;
