--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -61,8 +61,8 @@ main textarea::-webkit-scrollbar-track {
 body {
   margin: auto;
   font-family: OpenSans-Regular;
-  background-blend-mode: screen;
-  background-color: rgba(225, 202, 111, 0.075);
+  background-blend-mode: lighten;
+  background-color: rgba(248, 248, 255, 0.2);
   background-image: url(../../images/template/body-mobile.jpg);
   background-position: center top;
   background-size: contain;
