--- a/assets/scss/template/_styles.scss
+++ b/assets/scss/template/_styles.scss
@@ -1,16 +1,37 @@
 /* template */
 
+html {
+	height: 100%;
+	overflow: hidden;
+}
+
 body {
+	height: 100%;
+	overflow: auto;
+	overscroll-behavior: none;
     @include setbox(null, null, null, auto);
     font-family: OpenSans-Regular;
-    background-blend-mode: lighten;
-    background-color: rgba($white, 0.2);
-    background-image: url(../../images/template/body-mobile.jpg);
-    background-position: center top;
-    background-size: contain;
-    @include large_and_up {
-        background-image: url(../../images/template/body.jpg);
-    }
+	&:before {
+		content: "";
+		display: block;
+		position: fixed;
+		background-blend-mode: lighten;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: -999;
+		background: rgba($white, 0.2) url(../../images/template/body-mobile.jpg);
+		background-repeat: no-repeat;
+		background-position: center center;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		@include large_and_up {
+			background: rgba($white, 0.2) url(../../images/template/body.jpg);
+		}
+	}
 }
 
 h1 {
