--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -295,8 +295,7 @@ footer::before {
   }
 }
 .media-object .media-object-section:nth-child(1) p {
-  width: 100%;
-  margin: 1rem auto 1rem auto;
+  margin: 1rem auto;
 }
 
 .rel {
