--- a/assets/scss/about.scss
+++ b/assets/scss/about.scss
@@ -51,7 +51,7 @@
                 border-radius: 17px;
             }
             p {
-                @include setbox(100%, null, null, 1rem auto 1rem auto);
+                @include setbox(null, null, null, 1rem auto);
             }
         }
     }
